# yigent

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
benchmark_runs/: coding_easy.json  coding_medium.json
configs/: default.yaml  eval_tasks.yaml  hooks.yaml
docs/: ARCHITECTURE.md  DECISIONS.md  DESIGN_PHILOSOPHY.md  EVAL_REPORT.md  PHASE2A_COMPARISON.md  PHASE3_COMPARISON.md  PROVIDER_COMPARISON.md  STATUS.md
docs/learn/: day1-day2-notes.md
src/context/: assembler.py  circuit_breaker.py  engine.py  prompt_cache.py  summary_template.py
src/core/: __init__.py  agent_loop.py  capability_router.py  config.py  env_injector.py  iteration_budget.py  multi_agent.py  plan_mode.py  streaming_executor.py  stubs.py  types.py
test_workspace/: file5.txt
tests/: test_agent_loop.py  test_agent_loop_cleanup.py  test_anthropic_provider.py  test_anthropic_tool_parse.py  test_api.py  test_assembler.py  test_bash_cwd.py  test_benchmark.py  test_budget.py  test_capability_router.py  test_circuit_breaker.py  test_compression.py  test_config_validators.py  test_credential_pool.py  test_endpoint_quirks.py  test_engine_tool_pair_integrity.py  test_env_injector.py  test_executor.py  test_file_ops_containment.py  test_hook_system.py  test_iteration_budget.py  test_llm_judge.py  test_markdown_memory.py  test_mcp_adapter.py  test_mcp_adapter_cleanup.py  test_memory_tools.py  test_multi_agent.py  test_nudge.py  test_openai_compat_reasoning.py  test_openai_compat_stream_edges.py  test_permission_gate.py  test_plan_mode.py  test_prompt_cache.py  test_reasoning_extractor.py  test_registry.py  test_resolver_auxiliary.py  test_rule_checks.py  test_scenario_router.py  test_skill_creator.py  test_skill_improver.py  (+4 more)
(+41 files in other folders)
